--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 title = "Lucy Scarlett"
 theme = "hugo-nederburg-theme"
-languageCode = "nl-nl"
+languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "lucyscarlett"
 # Enable Google Analytics by entering your tracking code
@@ -16,7 +16,7 @@ paginate = 5 #frontpage pagination
   author = "Lucy Scarlett"
   authorLink = "https://lucyscarlett.com"
   bio = [
-    "Loes van Opzeeland is een 32-jaar oude goth/metal chick. Zij begon anderhalve week na Emiel te dampen omdat ze toch even de kat uit de boom wou kijken. Toen ze zag dat Emiel niet meer taalde naar sigaretten ging ze ook over. Loes houd van kleding maken, zichzelf mooi kleden, burlesque, tekenen, reenactment, lekker eten maken, en e-liquids met kaneel en theesmaken. Loes zal je van alles vertellen over wat ze van smaakjes vind, wat je lekker kunt mengen, en ze heeft ook een uitgesproken mening over dingen."
+    "Lucy Scarlett is de motor achter deze website."
   ]
 
 
@@ -32,7 +32,7 @@ paginate = 5 #frontpage pagination
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "lucy@lucyscarlett.com"
+  email = "loes@lucyscarlett.com"
 
   # Nav links in the side bar
   [[params.navlinks]]
@@ -44,15 +44,10 @@ paginate = 5 #frontpage pagination
   url = "wie-zijn-wij/"
 
   [[params.navlinks]]
-  name = "Get in touch"
+  name = "Laat van je horen"
   url = "contact/"
 
   [params.social]
-  facebook      = "full profile url in facebook"
-  googleplus    = "full profile url in googleplus"
-  email         = "email@example.com"
-  twitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
-  stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
+  facebook      = "https://www.facebook.com/lucyindewolken/"
+  email         = "loes@lucyscarlett.com"
+  twitter       = "https://twitter.com/indewolkenls"
