--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ theme = "hugo-nederburg-theme"
 languageCode = "nl"
 DefaultContentLanguage = "nl"
 # Enable comments by entering your Disqus shortname
-disqusShortname = "lucyscarlett"
+# disqusShortname = "lucyscarlett"
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
 preserveTaxonomyNames = true
