--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ DefaultContentLanguage = "nl"
 # Enable comments by entering your Disqus shortname
 # disqusShortname = "lucyscarlett"
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "UA-28269742-1"
 preserveTaxonomyNames = true
 paginate = 5 #frontpage pagination
 
