--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
 baseurl = "https://lucyscarlett.com"
 title = "Lucy Scarlett"
 theme = "hugo-nederburg-theme"
-languageCode = "nl"
-DefaultContentLanguage = "nl"
+languageCode = "nl-nl"
+DefaultContentLanguage = "nl-nl"
 # Enable comments by entering your Disqus shortname
-# disqusShortname = "lucyscarlett"
+disqusShortname = "lucyscarlett"
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = "UA-28269742-1"
 preserveTaxonomyNames = true
@@ -21,11 +21,13 @@ paginate = 5 #frontpage pagination
 [params]
   slogan = "In de wolken..."
   description = "Nieuws en info voor en door dampers in het Nederlands" # meta description
-  copyright = "&copy;2018 Lucy Scarlett"
   author = "Lucy Scarlett"
   authorLink = "https://lucyscarlett.com"
   bio = [
     "Lucy Scarlett is de motor achter deze website."
+  ]
+  copyright = [
+    "&copy; 2018 Lucy Scarlett"
   ]
 
 
@@ -46,7 +48,7 @@ paginate = 5 #frontpage pagination
   # Nav links in the side bar
   [[params.navlinks]]
   name = "Home"
-  url = ""
+  url = "/"
 
   [[params.navlinks]]
   name = "Wie zijn wij?"
