--- a/config.toml
+++ b/config.toml
@@ -62,6 +62,11 @@ paginate = 5 #frontpage pagination
   url = "contact/"
   weight = 3
 
+  [[menu.main]]
+  name = "Donaties"
+  url = "donaties/"
+  weight = 4
+
   [params.social]
   facebook      = "https://www.facebook.com/lucyindewolken/"
   email         = "loes@lucyscarlett.com"
